--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -99,7 +99,7 @@
   <string name="Clear_Sdcard_tips5">连接超时</string>
   <string name="Clear_Sdcard_tips6">SD卡数据已被清空</string>
   <string name="ClearingTips">清除中&#8230;</string>
-  <string name="Cloud_Camera">云摄像机</string>
+  <string name="Cloud_Camera">智能摄像机(电池版)</string>
   <string name="Consumer_Camera">消费类摄像机</string>
   <string name="DATA_FLOW_PHOTO">当前使用非WiFi网络，查看原图将会产生流量，是否继续？</string>
   <string name="DEAL_FEEDBACK">感谢您的反馈</string>
@@ -118,6 +118,7 @@
   <string name="DETECTION_AREA_DEFAULT">默认</string>
   <string name="DETECTION_AREA_DESCRI">默认侦测全部区域，设置后，仅在指定区域画面变化时报警</string>
   <string name="DETECTION_AREA_FAILED_LOAD">加载实时图失败</string>
+  <string name="DETECTION_AREA_FAILED_LOAD_RETRY">未获取到实时画面，无法设置侦测区域，请重试</string>
   <string name="DETECTION_AREA_GUIDE">拖拽红色方框，设置侦测区域</string>
   <string name="DETECTION_AREA_RESTORE">恢复默认</string>
   <string name="DETECTION_AREA_SET">已设置</string>
